# middlewares/auth.js
@@ -129,6 +129,85 @@ export const AuthenticateDriver = async (req, res, next) => {
     }
 };
 
+export const AuthenticateUser = async (req, res, next) => {
+    const accessToken = req.cookies.inrideaccesstoken;
+    const accountId = req.cookies.inrideaccessid;
+
+    try {
+        if (accessToken) {
+            try {
+                const decoded = jwt.verify(accessToken, process.env.JWT_ACCESS_TOKEN_SECRET);
+                let user;
+
+                if (decoded.accountType === 'passenger') {
+                    user = await PassengerModel.findOne({ passengerId: decoded.id });
+                } else if (decoded.accountType === 'driver') {
+                    user = await DriverModel.findOne({ driverId: decoded.id });
+                }
+
+                if (!user) {
+                    return sendResponse(res, 404, false, 'User not found');
+                }
+                if (!user.refreshToken) {
+                    return sendResponse(res, 403, false, 'Unauthenticated');
+                }
+
+                req.user = { ...user.toObject(), accountType: decoded.accountType };
+                return next();
+            } catch (error) {
+                if (error.name === 'TokenExpiredError' || error.name === 'JsonWebTokenError') {
+                    if (accountId) {
+                        let user;
+                        if (decoded?.accountType === 'passenger') {
+                            user = await PassengerModel.findOne({ passengerId: accountId });
+                        } else {
+                            user = await DriverModel.findOne({ driverId: accountId });
+                        }
+                        const refreshTokenExist = await RefreshTokenModel.findOne({ accountId });
+
+                        if (user && refreshTokenExist) {
+                            const accessToken = user.getAccessToken();
+                            res.cookie('inrideaccesstoken', accessToken, {
+                                httpOnly: true,
+                                sameSite: 'None',
+                                secure: true,
+                                maxAge: 15 * 60 * 1000, // 15 minutes
+                            });
+                            req.user = { ...user.toObject(), accountType: decoded?.accountType };
+                            return next();
+                        }
+                    }
+                    return sendResponse(res, 403, false, 'Unauthenticated');
+                }
+            }
+        } else if (accountId) {
+            let user;
+            if (decoded?.accountType === 'passenger') {
+                user = await PassengerModel.findOne({ passengerId: accountId });
+            } else {
+                user = await DriverModel.findOne({ driverId: accountId });
+            }
+            const refreshTokenExist = await RefreshTokenModel.findOne({ accountId });
+
+            if (user && refreshTokenExist) {
+                const accessToken = user.getAccessToken();
+                res.cookie('inrideaccesstoken', accessToken, {
+                    httpOnly: true,
+                    sameSite: 'None',
+                    secure: true,
+                    maxAge: 15 * 60 * 1000, // 15 minutes
+                });
+                req.user = { ...user.toObject(), accountType: decoded?.accountType };
+                return next();
+            }
+        }
+        return sendResponse(res, 403, false, 'Unauthenticated');
+    } catch (error) {
+        console.error('Authentication error:', error);
+        return sendResponse(res, 500, false, 'Server error during authentication');
+    }
+};
+
 export const AuthenticatePassengerSocket = async (socket, next) => {
     try {
         const cookies = socket.handshake.headers.cookie || '';  // Safeguard for missing cookies
